# iac-smith

./: .gitignore  AGENT_REFERENCE.md  LICENSE  README.md  SECURITY.md  SETUP.md  pyproject.toml
.github/: iac-smith.yml
.github/workflows/: ci.yml  issue-to-pr.yml
docs/: ARCHITECTURE_FLOW.md  LAYOUT.md  PROJECT_BRIEF.md  RULESET.md  SETUP.md
fixtures/eval/: issue-58-ecs-fargate.yaml  issue-59-aurora.yaml  replay-issue-58-ecs-fargate.yaml  replay-issue-59-aurora.yaml
rules/: aws.yaml  pr_review.yaml  security.yaml  tagging.yaml  terraform.yaml  terragrunt.yaml
scripts/: bootstrap_aws_role.py
src/iac_smith/: __init__.py  bedrock_intent.py  blackboard.py  cli.py  dynamic_terraform.py  eval.py  generator.py  graph.py  provider_lock.py  provider_schema.py  state.py  (+6 more)
tests/: test_bedrock_integration.py  test_bedrock_intent_parser.py  test_blackboard_contracts.py  test_blackboard_generic_contracts.py  test_change_planner.py  test_cli_end_to_end.py  test_cli_safety.py  test_contract.py  test_deterministic_foundation_validate.py  test_documentation_status.py  test_dynamic_terraform_generator.py  test_eval_harness.py  test_generator.py  test_github_issue_client.py  test_github_pr_client.py  test_graph_routing.py  test_intent_parser.py  test_pr_summary.py  test_pr_writer.py  test_provider_lock.py  test_provider_schema.py  test_repo_scanner.py  test_ruleset.py  test_runtime_validation.py  test_security_hardening.py  test_spec_composer.py  test_spec_renderer.py  test_spec_renderer_full_resolution.py  test_static_review.py  test_version_detection.py  test_workspace.py
(+14 files in other folders)
